@startuml BD_BoviMonitor
hide circle
skinparam linetype ortho

entity "Lote" as lote {
  * id : INTEGER <<PK>>
  --
  nome : VARCHAR(100)
  quantidade_cabecas : INTEGER
  status : VARCHAR(20)
}

entity "Vacina" as vacina {
  * id : INTEGER <<PK>>
  --
  nome : VARCHAR(100)
  fabricante : VARCHAR(100)
  dias_carencia : INTEGER
  obrigatoria : BOOLEAN
}

entity "ManejoSanitario" as manejo {
  * id : INTEGER <<PK>>
  --
  * lote_id : INTEGER <<FK>>
  * vacina_id : INTEGER <<FK>>
  data_aplicacao : DATE
  data_liberacao : DATE
}

lote ||--o{ manejo : "recebe"
vacina ||--o{ manejo : "é aplicada em"

@enduml